--- a/prolanceerTask.html
+++ b/prolanceerTask.html
@@ -39,7 +39,7 @@
 							<td>{{data.rank}}</td>
 							<td>{{data.symbol}}</td>
 							<td>{{data.price_usd}}</td>
-							<td>{{data.price_usd}}</td>
+							<td>{{data.price_btc}}</td>
 						</tr>
 						
 					</table>
