--- a/prolanceerTask.html
+++ b/prolanceerTask.html
@@ -31,7 +31,7 @@
 							<th>Rank </th>
 							<th>Symbol</th>
 							<th>Price USD </th>
-							<th>price_btc </th>
+							<th>Price_btc </th>
 							
 						</tr>
 						<tr ng-repeat="data in getDataList ">
